# mcp-aviation-weather

./: COME-FUNZIONA-IL-CODICE.md  README.md  TOOLS.md  pyproject.toml  start.sh  test_client.py
src/aviation_weather_mcp/: __main__.py  client.py  exceptions.py  server.py
