[project]
name = "aviation-weather-mcp-server"
version = "0.1.0"
description = "Aviation Weather MCP Server for accessing aviationweather.gov APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
    "typer>=0.15.1",
    "pydantic>=2.0.0"
]

[[project.authors]]
name = "AI Assistant"
email = "assistant@example.com"

[project.scripts]
aviation-weather-mcp-server = "aviation_weather_mcp.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aviation_weather_mcp"]

[tool.hatch.build]
packages = ["src/aviation_weather_mcp"]
